[package]
name = "letter"
version = "0.17.0"
edition = "2024"

[dependencies]
# clap = "4.5.34" # at dev time
clap = "4.5.37"
colored = "3.0.0"
serde = {version = "1.0.218", features = ["derive"]} 
serde_json = "1.0"
toml = "0.8.20"
#tokio = {version = "1.44.1" ,features = ["full"]} # at dev time
tokio = {version = "1.44.2" ,features = ["full"]}
